# ZypoCare-One

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/web/: middleware.ts  next.config.ts  package.json  proxy.ts  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  (+3 more)
docs/Compliance Infrastructure/: ZypoCare_Compliance_Infrastructure_OnePhase_v1.md
docs/Diagnostics Configuration/: Diagnostics_Configuration_Module_Workflow.md
docs/OT Module/: OT_Setup_Module_Workflow_UserStories.md
docs/Pharmacy/: ZypoCare_Pharmacy_Infrastructure_Module_Workflow.docx
docs/Phase-1-PRD/: ZypoCare_Infrastructure_PRD_Phase1.md
docs/Product-BRD/: ZypoCare_One_Unified_BRD_v2.md
services/ai-copilot/: package.json  pyproject.toml
services/ai-copilot/src/: __main__.py  app.py  config.py
services/ai-copilot/src/collectors/: models.py  schema_context.py
services/ai-copilot/src/data/: hospital_profiles.json  nabh-checklist.json  specialty_department_map.json
services/ai-copilot/src/db/: models.py  session.py
services/ai-copilot/src/engines/: __init__.py  branch_reviewer.py  compliance_help.py  compliance_validator.py  consistency_checker.py  field_validator.py  fix_suggester.py  go_live_scorer.py  models.py  nabh_checker.py  naming_enforcer.py  nl_query.py  page_insights.py  setup_copilot.py  smart_defaults.py
services/ai-copilot/src/infra/: autofill.py  models.py
services/ai-copilot/src/services/: chat_session.py  ollama.py
services/ai-copilot/src/zypocare_ai_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+723 files in other folders)
