[project]
name = "zypocare-ai-copilot"
version = "0.2.0"
description = "Role-aware AI Copilot service for ZypoCare HIMS — Infrastructure AI + Clinical AI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
]

[project.scripts]
ai-copilot = "src.__main__:main"

[tool.uvicorn]
host = "0.0.0.0"
port = 8100
reload = true
